--- a/.travis.yml
+++ b/.travis.yml
@@ -8,7 +8,7 @@ php:
   - 7.1
 install:
   - composer install
-  - php artisan migrate
+  - php artisan migrate --seed
 script:
   - phpunit --configuration phpunit.xml --coverage-text
 deploy:
