--- a/.env
+++ b/.env
@@ -7,6 +7,7 @@ APP_URL=http://localhost
 LOG_CHANNEL=stack
 
 DB_CONNECTION=sqlite
+DB_DATABASE=/home/site/wwwroot/database
 
 BROADCAST_DRIVER=log
 CACHE_DRIVER=file
