--- a/.travis.yml
+++ b/.travis.yml
@@ -7,7 +7,7 @@ language: php
 php:
   - 7.2
 install:
-  - php composer.phar install
+  - composer install
 script:
   - phpunit --configuration phpunit.xml --coverage-text
 deploy:
